finalização do menu e sidebar

--- a/Painel Dashboard/index.html
+++ b/Painel Dashboard/index.html
@@ -8,31 +8,53 @@
     <title>Painel Dashboard</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark flex-nowrap fixed-top shadow">
-          <a class="navbar-brand" href="#">Navbar</a>
+    <header class="navbar navbar-dark bg-dark flex-nowrap fixed-top shadow">
+          <a class="navbar-brand logo" href="#">Navbar</a>
           <input class="form-control form-control-sm" id="search" type="text" placeholder="Search" area-label="Search">
           <div class="navbar-nav px-3">
             <a  class="nav-item nav-link text-nowrap" href="#">Sign Out</a>
           </div>   
-    </nav>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias hic modi, beatae provident ad libero quod nesciunt sed ullam illum? Deserunt nihil impedit soluta omnis perferendis modi voluptas. Eaque, quos.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus debitis, beatae explicabo dolore suscipit eum praesentium fugiat laborum voluptate necessitatibus ullam fuga, ad quam unde, quisquam ratione? Quo, ut quasi.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos illum laudantium facilis at molestias neque, sit ullam vero libero. Accusamus quos voluptas, hic quisquam eaque omnis eius numquam est?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias hic modi, beatae provident ad libero quod nesciunt sed ullam illum? Deserunt nihil impedit soluta omnis perferendis modi voluptas. Eaque, quos.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus debitis, beatae explicabo dolore suscipit eum praesentium fugiat laborum voluptate necessitatibus ullam fuga, ad quam unde, quisquam ratione? Quo, ut quasi.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dignissimos illum laudantium facilis at molestias neque, sit ullam vero libero. Accusamus quos voluptas, hic quisquam eaque omnis eius numquam est?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat earum dignissimos illum. Eos, voluptate fuga suscipit corrupti dolore aspernatur enim asperiores, nulla nemo provident voluptas in totam sed ipsum labore.</p>   
+    </header>
+    <nav class="col-2 bg-light sidebar shadow">
+        <ul class="nav flex-column">
+            <li class="nav-item list">
+                <a class="nav-link active" href="#">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Orders</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Customers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Reports</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Integration</a>
+            </li>
+        </ul>
+        <h6 class="sidebar-heading">Saved Reports</h6>
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Current month</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Last quarter</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Social engagement</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Year-end sale</a>
+            </li>
+        </ul>
+    </nav>   
+    <main role="main" class="col-10 main">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt doloribus distinctio dicta aut libero. Odio quia eos et placeat nesciunt harum porro dolor eius! Aperiam, earum? Dignissimos repudiandae neque quaerat.</p>
+    </main>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
