ajuste no span na section do dashboard

--- a/Painel Dashboard/index.html
+++ b/Painel Dashboard/index.html
@@ -100,19 +100,19 @@
                             <a href="#" class="list-group-item list-group-item-action" aria-current="true">
                               <div class="d-flex w-100 justify-content-between">
                                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <small>3 days ago</small>
+                                <small class="col-2 text-center">3 days ago</small>
                               </div>
                             </a>
                             <a href="#" class="list-group-item list-group-item-action">
                               <div class="d-flex w-100 justify-content-between">
                                 <p class="mb-0">Doloremque, debitis? Odit provident beatae optio ducimus consequuntur, harum quas quo expedita veniam esse omnis nisi!</p>
-                                <small>3 days ago</small>
+                                <small class="col-2 text-center">3 days ago</small>
                               </div>
                             </a>
                             <a href="#" class="list-group-item list-group-item-action">
                                 <div class="d-flex w-100 justify-content-between">
                                   <p class="mb-0">Expedita incidunt molestias labore repudiandae. Animi maiores neque voluptate facere provident possimus laudantium quas tempora aliquid.</p>
-                                  <small>3 days ago</small>
+                                  <small class="col-2 text-center">3 days ago</small>
                                 </div>
                               </a>
                         </div>
