--- a/Painel Dashboard/index.html
+++ b/Painel Dashboard/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="navbar navbar-dark bg-dark flex-nowrap fixed-top shadow">
-          <a class="navbar-brand logo" href="#">Navbar</a>
+          <a class="navbar-brand logo" href="#">Sant-Lazz</a>
           <input class="form-control form-control-sm" id="search" type="text" placeholder="Search" area-label="Search">
           <div class="navbar-nav px-3">
             <a  class="nav-item nav-link text-nowrap" href="#">Sign Out</a>
@@ -126,8 +126,78 @@
                   </div>
             </article>
         </section>
-        <section class="row border-bottom">
-                <h1 class="h2">Last Users</h1>
+        <section class="row">
+          <header class="px-3 py-2 border-bottom">
+            <h1 class="h2">Last Users</h1>
+          </header>
+          <article class="mt-2">
+            <table class="table table-striped table-hover table-sm">
+              <thead>
+                <tr>
+                  <th scope="col">ID</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                  <th scope="col">Whatsapp</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                  <td>0001-1000</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                  <td>1234-5678</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Larry the Bird</td>
+                  <td>Box</td>
+                  <td>@twitter</td>
+                  <td>7777-6666</td>
+                </tr>
+                <tr>
+                  <th scope="row">4</th>
+                  <td>Samuel</td>
+                  <td>Nunes</td>
+                  <td>@SamuelNunesDev</td>
+                  <td>4002-8922</td>
+                </tr>
+                <tr>
+                  <th scope="row">5</th>
+                  <td>Ana</td>
+                  <td>Lopes</td>
+                  <td>@ginasiodoparque</td>
+                  <td>3221-2011</td>
+                </tr>
+              </tbody>
+            </table>
+            <div aria-label="Page navigation example">
+              <ul class="pagination justify-content-center">
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </article>
+                
         </section>
     </main> 
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
