responsividade incluída e ajustes na tabulação

--- a/Site Bootstrap/index.html
+++ b/Site Bootstrap/index.html
@@ -11,63 +11,63 @@
 <body>
     <main>
         <header class="jumbotron jumbotron-fluid">
-            <div class="container">
-            <h1>Curso Bootstrap &amp; Jquery</h1>
-            <p class="lead">Aprenda HTML, CSS e Javascript</p>
-            </div>
-            <nav>
-              <ul class="nav">
-                  <li class="nav-item">
-                  <a class="nav-link" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="#">Quem Sou?</a>
-                  </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="#">Contatos</a>
-                  </li>
-              </ul>
+          <div class="container">
+            <h1>Treinamento Home Office</h1>
+            <p class="lead">Aprenda mais sobre o atendimento, metas e Excel</p>
+          </div>
+          <nav>
+            <ul class="nav">
+                <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Quem Sou?</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Fale Conosco</a>
+                </li>
+            </ul>
           </nav>
         </header>
         <section class="cards-container container shadow mt-5">
           <div class="row">
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-md-6 col-lg-4">
               <article class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="imagens/microsoft-excel-4-722715.png" alt="Card image cap">
-                  <div class="card-body">
-                    <p class="card-text">Seletores</p>
-                  </div>
+                <img class="card-img-top" src="imagens/3215656-200.png" alt="Card image cap">
+                <div class="card-body mb-2">
+                  <p class="card-text">Atendimento</p>
+                </div>
               </article>
             </div>
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-md-6 col-lg-4">
               <article class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="imagens/microsoft-excel-4-722715.png" alt="Card image cap">
-                  <div class="card-body">
-                    <p class="card-text">Seletores</p>
-                  </div>
+                <img class="card-img-top" src="imagens/download.png" alt="Card image cap">
+                <div class="card-body mb-2">
+                  <p class="card-text">Metas</p>
+                </div>
               </article>
             </div>
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-md-6 col-lg-4">
               <article class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="imagens/microsoft-excel-4-722715.png" alt="Card image cap">
-                  <div class="card-body">
-                    <p class="card-text">Seletores</p>
-                  </div>
+                <img class="card-img-top" src="imagens/microsoft-excel-4-722715.png" alt="Card image cap">
+                <div class="card-body mb-2">
+                  <p class="card-text">Excel</p>
+                </div>
               </article>
             </div>  
           </div>
         </section>
         <section class="cards-container container">
-            <article class="row">
-                <h2 class="h4 border-bottom">Lorem</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed tempora hic numquam fugit voluptates voluptatibus tempore accusamus aspernatur. Neque in perferendis mollitia sed maxime error tenetur fugiat obcaecati. Fugiat, laboriosam!</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, minus accusantium non repellendus incidunt quaerat cum animi sint fuga iusto assumenda, deleniti, eum et vitae at nihil esse modi beatae?</p>
-            </article>
+          <article class="row">
+            <h2 class="h4 border-bottom">Lorem</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed tempora hic numquam fugit voluptates voluptatibus tempore accusamus aspernatur. Neque in perferendis mollitia sed maxime error tenetur fugiat obcaecati. Fugiat, laboriosam!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, minus accusantium non repellendus incidunt quaerat cum animi sint fuga iusto assumenda, deleniti, eum et vitae at nihil esse modi beatae?</p>
+          </article>
         </section>
         <footer class="rodape d-flex">
           <p class="align-items-center m-0">Copyright &copy; 2021</p>
         </footer>
-    </main>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  </main>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
