ajustes no footer

--- a/Site Bootstrap/index.html
+++ b/Site Bootstrap/index.html
@@ -65,7 +65,7 @@
           </article>
         </section>
         <footer class="rodape d-flex">
-          <p class="align-items-center m-0">Copyright &copy; 2021</p>
+          <p class="align-items-center m-0">Desenvolvido por Samuel Nunes &copy; 2021</p>
         </footer>
   </main>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
