alteração da exibição do menu em telas desktop

--- a/Portifólio/index.html
+++ b/Portifólio/index.html
@@ -12,24 +12,27 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark px-4 fixed-top" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark px-4 fixed-top shadow" id="sideNav">
+            <span class="d-none d-lg-block">
+                <img src="images/avatar.jpg" class="rounded-circle img-profile" alt="Samuel">
+            </span>
             <a class="navbar-brand" href="#">Samuel Nunes de Souza</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav navbar-right">
-                <a class="nav-item nav-link" href="#">Inicio</a>
-                <a class="nav-item nav-link" href="#trabalhos-recentes">Trabalhos Recentes</a>
-                <a class="nav-item nav-link" href="#entre-em-contato">Entre em Contato</a>
-              </div>
+              <ul class="navbar-nav navbar-right">
+                <li class="nav-item my-2"><a class="nav-item nav-link" href="#">Inicio</a></li>
+                <li class="nav-item my-2"><a class="nav-item nav-link" href="#trabalhos-recentes">Trabalhos Recentes</a></li>
+                <li class="nav-item my-2"><a class="nav-item nav-link" href="#entre-em-contato">Entre em Contato</a></li>
+              </ul>
             </div>
           </nav>
     </header>
-    <main class="container-fluid mt-5 pt-4">
+    <main class="container-fluid px-4">
         <section class="section border-bottom" id="inicio">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-            <p>Numquam facilis hic autem dolorum exercitationem laudantium at veniam temporibus nam? Obcaecati eaque sit quisquam, quidem vel iure voluptatem aspernatur voluptatum perspiciatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit blanditiis molestias at magni. Temporibus accusantium hic consectetur fugiat, error impedit facere doloribus optio, itaque quae nesciunt officiis qui tempora mollitia!</p>
+            <h2 class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            <p class="indent">Numquam facilis hic autem dolorum exercitationem laudantium at veniam temporibus nam? Obcaecati eaque sit quisquam, quidem vel iure voluptatem aspernatur voluptatum perspiciatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit blanditiis molestias at magni. Temporibus accusantium hic consectetur fugiat, error impedit facere doloribus optio, itaque quae nesciunt officiis qui tempora mollitia!</p>
             <a href="#" class="btn btn-outline-dark my-4" role="button">Saiba Mais</a>
         </section>
         <section class="section" id="trabalhos-recentes">
@@ -40,7 +43,7 @@
                         <img class="card-img-top" src="images/fulls/01.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -49,7 +52,7 @@
                         <img class="card-img-top" src="images/fulls/02.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -60,7 +63,7 @@
                         <img class="card-img-top" src="images/fulls/03.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -69,7 +72,7 @@
                         <img class="card-img-top" src="images/fulls/04.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -80,7 +83,7 @@
                         <img class="card-img-top" src="images/fulls/05.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -89,7 +92,7 @@
                         <img class="card-img-top" src="images/fulls/06.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -97,7 +100,7 @@
         </section>
         <section class="section" id="entre-em-contato">
             <h2 class="my-4">Entre em Contato</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam unde dolore iusto modi. Dolore sapiente totam quae eos ipsam sunt, doloribus eligendi iure adipisci ullam neque perferendis maiores animi voluptatibus!</p>
+            <p class="indent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam unde dolore iusto modi. Dolore sapiente totam quae eos ipsam sunt, doloribus eligendi iure adipisci ullam neque perferendis maiores animi voluptatibus!</p>
             <article class="row">
                     <div class="col-12 col-md-9">
                         <form>
@@ -127,24 +130,25 @@
                 </aside>
             </article>
         </section>
-        <footer>
-            <ul class="nav">
-                <li class="navitem">
-                    <a href="" class="nav-link">
-
-                    </a>
-                </li>
-                <li class="navitem">
-                    <a href="" class="nav-link">
-
-                    </a>
-                </li>
-            </ul>
-            <ul>
-                <li>&copy; Untitled</li>
-                <li>Design: <a href="">HTML5Up</a></li>
-            </ul>
-        </footer>
+        
     </main>
+    <footer>
+        <ul class="nav justify-content-end">
+            <li class="nav-item ">
+                <a href="">
+                    Twiter
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="">
+                    Facebook
+                </a>
+            </li>
+        </ul>
+        <ul class="nav justify-content-end">
+            <li class="nav-item mx-3">&copy; Untitled</li>
+            <li class="nav-item">Design: <a href="">HTML5Up</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
