ajustes nas identações do texto das cards

--- a/Portifólio/index.html
+++ b/Portifólio/index.html
@@ -43,7 +43,7 @@
                         <img class="card-img-top" src="images/fulls/01.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                         <img class="card-img-top" src="images/fulls/02.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         <img class="card-img-top" src="images/fulls/03.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                         <img class="card-img-top" src="images/fulls/04.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                         <img class="card-img-top" src="images/fulls/05.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                         <img class="card-img-top" src="images/fulls/06.jpg" alt="Card image cap">
                     </a>
                     <div class="card-body">
-                        <p class="card-text indent">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
+                        <p class="card-">Lorem, ipsum dolor sit amet consectetur adipisicing elit.!</p>
                         <p><small> Ut dolorem alias sed et perspiciatis officiis optio voluptatem porro, voluptate nemo natus eveniet ullam repellat fugit, enim magnam minus molestiae aliquam</small></p>
                     </div>
                 </div>
