ajustes no footer

--- a/Portifólio/index.html
+++ b/Portifólio/index.html
@@ -31,12 +31,12 @@
     </header>
     <main class="container-fluid px-4">
         <section class="section border-bottom" id="inicio">
-            <h2 class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            <h2 class="mt-2 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
             <p class="indent">Numquam facilis hic autem dolorum exercitationem laudantium at veniam temporibus nam? Obcaecati eaque sit quisquam, quidem vel iure voluptatem aspernatur voluptatum perspiciatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit blanditiis molestias at magni. Temporibus accusantium hic consectetur fugiat, error impedit facere doloribus optio, itaque quae nesciunt officiis qui tempora mollitia!</p>
             <a href="#" class="btn btn-outline-dark my-4" role="button">Saiba Mais</a>
         </section>
         <section class="section" id="trabalhos-recentes">
-            <h2 class="my-4">Trabalhos Recentes</h2>
+            <h2 class="my-5">Trabalhos Recentes</h2>
             <article class="row px-5">
                 <div class="card col-12 col-sm-6 m-3" style="width: 18rem;">
                     <a href="#">
@@ -133,19 +133,19 @@
         
     </main>
     <footer>
-        <ul class="nav justify-content-end">
-            <li class="nav-item ">
-                <a href="">
-                    Twiter
+        <ul class="nav justify-content-end mb-2 px-3">
+            <li class="nav-item mx-2">
+                <a href="#">
+                    <img src="images/facebook.png" alt="logo do facebook">
                 </a>
             </li>
             <li class="nav-item">
-                <a href="">
-                    Facebook
+                <a href="#">
+                    <img src="images/github.png" alt="logo do github">
                 </a>
             </li>
         </ul>
-        <ul class="nav justify-content-end">
+        <ul class="nav justify-content-end px-3">
             <li class="nav-item mx-3">&copy; Untitled</li>
             <li class="nav-item">Design: <a href="">HTML5Up</a></li>
         </ul>
